# simplest-catch2v3

./: README.md
source/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
